--- a/resources.qrc
+++ b/resources.qrc
@@ -9,6 +9,7 @@
         <file>icon.ico</file>
         <file>mouse.png</file>
         <file>grass.jpg</file>
+        <file>mine.png</file>
     </qresource>
     <qresource prefix="/new/fonts">
         <file>FerdinandFont-Regular.ttf</file>
@@ -16,7 +17,7 @@
     <qresource prefix="/new/sounds">
         <file>gameOverSound.wav</file>
         <file>eatSound.wav</file>
-        <file>backgroundWelcomeWindowMusic.wav</file>
-        <file>backgroundGameWindowMusic.wav</file>
+        <file>funMusic.wav</file>
+        <file>hyper-spoiler.mp3</file>
     </qresource>
 </RCC>
